apps/paperless/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
  annotations:
    volsync.backube/privileged-movers: "true"
