apps/paperless/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: paperless-redis
    app.kubernetes.io/name: paperless-redis
    app.kubernetes.io/service: paperless-redis
  name: paperless-redis
  namespace: paperless
spec:
  ports:
  - name: http
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app.kubernetes.io/component: redis
    app.kubernetes.io/instance: paperless-redis
    app.kubernetes.io/name: paperless-redis
  type: ClusterIP
