apps/paperless/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: paperless
    app.kubernetes.io/name: paperless
    app.kubernetes.io/service: paperless-app
  name: paperless-app
  namespace: paperless
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app.kubernetes.io/component: paperless
    app.kubernetes.io/instance: paperless
    app.kubernetes.io/name: paperless
  type: ClusterIP
