apps/paperless/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    external-dns.kubernetes.io/target: ingress.home.arpa
    external-dns.kubernetes.io/ttl: "60"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  labels:
    app.kubernetes.io/instance: paperless
    app.kubernetes.io/name: paperless
    external-dns.invertedorigin.com/enabled: "true"
  name: paperless
  namespace: paperless
spec:
  ingressClassName: cilium
  rules:
  - host: paperless.invertedorigin.com
    http:
      paths:
      - backend:
          service:
            name: paperless-app
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - paperless.invertedorigin.com
    secretName: paperless-tls-domain
